[gd_scene load_steps=12 format=2]

[ext_resource path="res://Menu/Options/OptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://Menu/Resources/menu-background.png" type="Texture" id=2]
[ext_resource path="res://Menu/Options/on-off-button.png" type="Texture" id=3]
[ext_resource path="res://Menu/Resources/back-unpressed.png" type="Texture" id=4]
[ext_resource path="res://Menu/Resources/back-pressed.png" type="Texture" id=5]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Menu/Resources/fredoka-one.ttf"

[sub_resource type="DynamicFont" id=2]
size = 130
outline_size = 5
outline_color = Color( 1, 0.454902, 0.454902, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Menu/Resources/fredoka-one.ttf"

[sub_resource type="DynamicFont" id=4]
size = 100
outline_size = 5
outline_color = Color( 0.909804, 0.623529, 0.290196, 1 )
font_data = SubResource( 3 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 300, 150 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 300, 150 )

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -720.5
margin_top = -473.5
margin_right = 720.5
margin_bottom = 473.5
rect_pivot_offset = Vector2( -330, 210 )
texture = ExtResource( 2 )
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1441, 947 )

[node name="Label" type="Label" parent="Background/VBoxContainer"]
margin_right = 1441.0
margin_bottom = 158.0
rect_min_size = Vector2( 1440, 158 )
custom_fonts/font = SubResource( 2 )
text = "OPTIONS"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Background/VBoxContainer"]
margin_top = 162.0
margin_right = 1441.0
margin_bottom = 362.0
rect_min_size = Vector2( 1440, 200 )
custom_constants/separation = 200
alignment = 1

[node name="Label" type="Label" parent="Background/VBoxContainer/HBoxContainer"]
margin_left = 320.0
margin_top = 25.0
margin_right = 620.0
margin_bottom = 175.0
rect_min_size = Vector2( 300, 150 )
custom_fonts/font = SubResource( 4 )
custom_constants/shadow_offset_x = 0
text = "Sound"
valign = 1

[node name="Sound" type="TextureButton" parent="Background/VBoxContainer/HBoxContainer"]
margin_left = 820.0
margin_right = 1120.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 180 )
texture_normal = SubResource( 5 )
expand = true
stretch_mode = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="Background/VBoxContainer"]
margin_top = 366.0
margin_right = 1441.0
margin_bottom = 566.0
rect_min_size = Vector2( 1440, 200 )
custom_constants/separation = 200
alignment = 1

[node name="Label" type="Label" parent="Background/VBoxContainer/HBoxContainer2"]
margin_left = 320.0
margin_top = 25.0
margin_right = 620.0
margin_bottom = 175.0
rect_min_size = Vector2( 300, 150 )
custom_fonts/font = SubResource( 4 )
custom_constants/shadow_offset_x = 0
text = "Music"
valign = 1

[node name="Music" type="TextureButton" parent="Background/VBoxContainer/HBoxContainer2"]
margin_left = 820.0
margin_right = 1120.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 180 )
texture_normal = SubResource( 6 )
expand = true
stretch_mode = 3

[node name="BackButton" type="TextureButton" parent="Background/VBoxContainer"]
margin_top = 570.0
margin_right = 1441.0
margin_bottom = 920.0
rect_min_size = Vector2( 450, 350 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
stretch_mode = 3

[connection signal="pressed" from="Background/VBoxContainer/HBoxContainer/Sound" to="." method="_on_Sound_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/HBoxContainer2/Music" to="." method="_on_Music_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
